fix error in disputes

--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -12,6 +12,9 @@
 {
     terminalId = Model.TerminalId
 }, htmlAttributes: null)
+<p>
+    @Html.ActionLink("Create dispute", "Create", "Disputes",new {terminalId = Model.TerminalId },null)
+</p>
 
 <div class="row" id="detailterminal">
 
