--- a/OctagonPlatform/Views/Terminals/Sections/Cassettes.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Cassettes.cshtml
@@ -7,17 +7,17 @@
                 @{
                     foreach (var item in Model)
                     {
-                <tr>
-                    <td>
-                        @item.Denomination
-                    </td>
-                    <td>
-                        <button type="button" class="CassettesEdit btn btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#myModalCassettesEdit">Edit</button>
-                    </td>
-                    <td>
-                        <button type="button" class="CassettesDelete btn btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#DeleteCassetteModal">Delete</button>
-                    </td>
-                </tr>
+                        <tr>
+                            <td>
+                                @item.Denomination
+                            </td>
+                            <td>
+                                <button type="button" class="CassettesEdit btn btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#myModalCassettesEdit">Edit</button>
+                            </td>
+                            <td>
+                                <button type="button" class="CassettesDelete btn btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#DeleteCassetteModal">Delete</button>
+                            </td>
+                        </tr>
                     }
                 }
             </tbody>
@@ -51,16 +51,16 @@
                         <div class="form-group">
                             @Html.TextBoxFor(m => m.FirstOrDefault(x => x.TerminalId == Convert.ToInt32(ViewData["terminalId"].ToString())).Denomination)
                         </div>
-                            <div class="form-group">
-                                @Html.CheckBox("AutoRecord")Auto Record
-                                @Html.ValidationMessage("AutoRecord")
+                        <div class="form-group">
+                            @Html.CheckBox("AutoRecord")Auto Record
+                            @Html.ValidationMessage("AutoRecord")
+                        </div>
+                        <div class="form-group">
+                            <div class="col-lg-10 col-lg-offset-2">
+                                <button type="reset" class="btn btn-default">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Save</button>
                             </div>
-                            <div class="form-group">
-                                <div class="col-lg-10 col-lg-offset-2">
-                                    <button type="reset" class="btn btn-default">Cancel</button>
-                                    <button type="submit" class="btn btn-primary">Save</button>
-                                </div>
-                            </div>
+                        </div>
                     }
                 </div>
             </div>
@@ -71,25 +71,33 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Modal Header</h4>
+                        <h4 class="modal-title">Add Cassette</h4>
                     </div>
+                    <div class="panel-body">
 
-                    <h3 class="alert-info">Edit</h3>
+                        @using (Html.BeginForm("SetCassettes", "Terminals"))
+                        {
+                            @Html.AntiForgeryToken()
+                            <input type="hidden" id="terminalId" name="TerminalId" value="@ViewData["terminalId"].ToString()">
 
-                    @using (Html.BeginForm("SetCassettes", "Terminals"))
-                    {
-                        @Model
-                        @Html.AntiForgeryToken()
-                        <input type="hidden" id="terminalId" name="TerminalId" value="@ViewData["terminalId"].ToString()">
-
-                        <p class="alert alert-danger">
-                            @ViewBag.Error
-                        </p>
-                        <div class="form-group">
-                            <input type="text" id="denomination" name="denomination" value="">
-
-                        </div>
+                            <p class="alert alert-danger">
+                                @ViewBag.Error
+                            </p>
                             <div class="form-group">
+                                Denomiantion
+                                @Html.DropDownList("Denomination", new List<SelectListItem>
+                {
+                    new SelectListItem{ Text="100", Value = "100" },
+                    new SelectListItem{ Text="50", Value = "50" },
+                    new SelectListItem{ Text="20", Value = "20" },
+                    new SelectListItem{ Text="10", Value = "10" },
+                    new SelectListItem{ Text="5", Value = "5" },
+                    new SelectListItem{ Text="1", Value = "1" },
+                 })
+
+                            </div>
+                            <div class="form-group">
+                                AutoRecord
                                 <input type="checkbox" id="autoRecord" name="autoRecord">
 
                             </div>
@@ -99,7 +107,8 @@
                                     <button type="submit" class="btn btn-primary">Save</button>
                                 </div>
                             </div>
-                    }
+                        }
+                    </div>
                 </div>
             </div>
         </div>
