--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -13,7 +13,7 @@
     terminalId = Model.TerminalId
 }, htmlAttributes: null)
 <p>
-    @Html.ActionLink("Create dispute", "Create", "Disputes",new {terminalId = Model.TerminalId },null)
+    @Html.ActionLink("Create dispute", "Create", "Disputes", new { terminalId = Model.TerminalId }, null)
 </p>
 
 <div class="row" id="detailterminal">
@@ -22,11 +22,27 @@
         <div class="panel-group" style="width: 100%;">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="texth3" data-toggle="collapse" data-target="#getConfigurations">
-                        <i class="fa fa-sun-o" style="font-size:25px;color:#4776a1"></i>
-                        <a data-toggle="collapse" href="#getConfigurations">Configuration</a>
-                    </h3>
-                    @Html.Partial("Sections/ConfigNotification", Model.TerminalAlertConfigs)
+                    <h4 class="panel-title">
+                        @Ajax.ActionLink("Configuration", "GetConfiguration", "Terminals", new { id = Model.Id },
+                   new AjaxOptions
+                   {
+                       UpdateTargetId = "getConfiguration",
+                       LoadingElementId = "loading3",
+                       InsertionMode = InsertionMode.Replace,
+                       HttpMethod = "Post"
+                   },
+                   htmlAttributes: new
+                   {
+                       @class = "link",
+                       data_toggle = "collapse",
+                       data_target = "#getConfiguration"
+                   })
+                    </h4>
+                </div>
+                <div id="getConfiguration" class="panel-collapse collapse">
+                    <div class="panel-body">
+                        <div class="loader"></div>
+                    </div>
                 </div>
             </div>
         </div>
