--- a/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
@@ -1,6 +1,5 @@
-﻿@model OctagonPlatform.Models.TerminalAlertConfig
+﻿@model OctagonPlatform.Models.FormsViewModels.TerminalConfigViewModel
 
-<div id="getConfigurations" class="panel-collapse collapse">
     <table class="table table-striped table-hover ">
         <tr class="info">
             <th data-toggle="collapse" data-target="#collapse1">
@@ -8,7 +7,7 @@
                 <div id="collapse1" class="collapse">
                     <table>
                         <tbody>
-                            @{ foreach (var item in Model.Terminal.WorkingHours)
+                            @{ foreach (var item in Model.WorkingHours)
                                 {
                                     <tr>
                                         <td>@item.Day</td>
@@ -153,7 +152,7 @@
                     @Html.AntiForgeryToken()
                     @Html.HiddenFor(m => m.Id)
                     
-                    @Html.Hidden("TerminalId", Model.Terminal.Id)
+                    @Html.Hidden("TerminalId", Model.Id)
 
                     <input type="hidden" id="WorkingHoursEdit" name="WorkingHoursEdit" value="Norway">
 
@@ -246,7 +245,7 @@
                 @using (Html.BeginForm("AddWorkingHours", "Terminals"))
                 {
 
-                    @Html.Hidden("TerminalId", Model.Terminal.Id)
+                    @Html.Hidden("TerminalId", Model.Id)
                     @Html.AntiForgeryToken()
                     @Html.HiddenFor(m => m.Id)
                     @Html.DropDownList("Days", new List<SelectListItem>
@@ -340,7 +339,7 @@
 
                 @using (Html.BeginForm("DeleteWorkingHours", "Terminals"))
             {
-                    @Html.Hidden("terminalId", Model.Terminal.Id)
+                    @Html.Hidden("terminalId", Model.Id)
                     @Html.AntiForgeryToken()
                     @Html.Hidden("WorkingHoursId")
                     <input type="hidden" id="workingHoursId" name="workingHoursId" value="">
@@ -355,7 +354,6 @@
         </div>
     </div>
 
-</div>
 
 @Scripts.Render("~/Scripts/jquery-1.10.2.js")
 
