--- a/OctagonPlatform/Views/Terminals/Sections/GeneralInfo.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/GeneralInfo.cshtml
@@ -8,7 +8,7 @@
             <tr class="info">
 
                 <th>Business Name: </th>
-                <th>@Model.Partner.BusinessName</th>
+                <th>@*@Model.Partner.BusinessName*@</th>
             </tr>
             <tr class="info">
 
@@ -18,7 +18,7 @@
             <tr class="info">
 
                 <th>Location Type:</th>
-                <th>@Model.LocationType.Name</th>
+                <th>@*@Model.LocationType.Name*@</th>
             </tr>
             <tr class="info">
 
@@ -33,12 +33,12 @@
             <tr class="info">
 
                 <th>Country:</th>
-                <th>@Model.Country.Name</th>
+                <th>@*@Model.Country.Name*@</th>
             </tr>
             <tr class="info">
 
                 <th>State:</th>
-                <th>@Model.State.Name</th>
+                <th>@*@Model.State.Name*@</th>
             </tr>
             @if (Model.City != null)
             {
@@ -81,12 +81,12 @@
             <tr class="info">
 
                 <th>Make:</th>
-                <th>@Model.Make.Name</th>
+                <th>@*@Model.Make.Name*@</th>
             </tr>
             <tr class="info">
 
                 <th>Model:</th>
-                <th>@Model.Model.Name</th>
+                <th>@*@Model.Model.Name*@</th>
             </tr>
             <tr class="info">
 
