--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -63,7 +63,8 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title texth3" style="font-size:25px;color:#4776a1">
-                        @Ajax.ActionLink("Cassettes", "GetCassettes", "Terminals", new { id = Model.Id },
+                        <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1">
+                        </i> @Ajax.ActionLink("Cassettes", "GetCassettes", "Terminals", new { id = Model.Id },
                    new AjaxOptions
                    {
                        UpdateTargetId = "getCassettes",
@@ -90,10 +91,28 @@
         <div class="panel-group" style="width: 100%;">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="texth3" data-toggle="collapse" data-target="#getNotes">
-                        <i class="fa fa-sticky-note-o" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getNotes">Notes</a>
+                    <h3 class="panel-title texth3" style="font-size:25px;color:#4776a1">
+                        <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1">
+                        </i> @Ajax.ActionLink("Notes", "GetNotes", "Terminals", new { id = Model.Id },
+                   new AjaxOptions
+                   {
+                       UpdateTargetId = "getNotes",
+                       LoadingElementId = "loading3",
+                       InsertionMode = InsertionMode.Replace,
+                       HttpMethod = "Post"
+                   },
+                   htmlAttributes: new
+                   {
+                       @class = "link",
+                       data_toggle = "collapse",
+                       data_target = "#getNotes"
+                   })
                     </h3>
-                    @Html.Partial("Sections/Notes", Model)
+                </div>
+                <div id="getNotes" class="panel-collapse collapse">
+                    <div class="panel-body">
+                        <div class="loader"></div>
+                    </div>
                 </div>
             </div>
         </div>
