--- a/OctagonPlatform/Views/Terminals/Sections/Documents.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Documents.cshtml
@@ -1,6 +1,5 @@
-﻿@model OctagonPlatform.Models.Terminal
+﻿@model OctagonPlatform.Models.FormsViewModels.TerminalDocumentsVM
 
-<div id="getDocuments" class="panel-collapse collapse">
     <div>
         @using (Html.BeginForm("SetDocuments", "Terminals", FormMethod.Post,
                                           new { enctype = "multipart/form-data" }))
@@ -42,46 +41,6 @@
 
                         }
 
-
-
-        @*//EDITTTTTTTTTTTTTTTTTTTTTTTTTTTtttttttttttttttt*@
-        <div id="" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Modal Header</h4>
-                    </div>
-
-                    <h3 class="alert-info">Edit</h3>
-
-                    @using (Html.BeginForm("SetDocuments", "Terminals"))
-                    {
-                        @Html.AntiForgeryToken()
-
-                        <input type="hidden" id="IndexTerminalId" name="IndexTerminalId" value="@Model.Id">
-                        <input type="hidden" id="noteId" name="noteId" value="">
-
-                        <p class="alert alert-danger">
-                            @ViewBag.Error
-                        </p>
-                        <div class="form-group">
-                            <input type="text" id="notes" name="notes" value="">
-                        </div>
-                        <div class="form-group">
-                            @*@Html.CheckBox("AutoRecord")Auto Record
-                                @Html.ValidationMessage("AutoRecord")*@
-                        </div>
-                        <div class="form-group">
-                            <div class="col-lg-10 col-lg-offset-2">
-                                <button type="reset" class="btn btn-default">Cancel</button>
-                                <button type="submit" class="btn btn-primary">Save</button>
-                            </div>
-                        </div>
-                    }
-                </div>
-            </div>
-        </div>
 
         <div id="myModaDocumentsAdd" class="modal fade" role="dialog">
             <div class="modal-dialog">
@@ -131,7 +90,9 @@
                         @using (Html.BeginForm("DocumentDelete", "Terminals", FormMethod.Post))
                         {
                             @Html.AntiForgeryToken()
-                            <input type="hidden" id="indexTerminalId" name="indexTerminalId" value="@Model.Id">
+                            <input type="hidden" id="id" name="id" value="@Model.Id">
+                            @Html.HiddenFor(m => m.TerminalId)
+                            @Html.HiddenFor(m=> m.Documents)
                             <input type="hidden" id="documentId" name="documentId" value="" />
 
                             <div class="form-group">
@@ -144,8 +105,6 @@
             </div>
         </div>
     </div>
-</div>
-
 
 @Scripts.Render("~/Scripts/jquery-1.10.2.js")
 
