update Contact to Ajax

--- a/OctagonPlatform/Views/Home/Index.cshtml
+++ b/OctagonPlatform/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
         <div class="nav navbar-nav navbar-right">
             @using (Html.BeginForm("Login", "Account", FormMethod.Post))
             {
-                <div class="form-group">
+                <div class="">
                     <div id="id01" class="modal">
                         <div class="containerlogin">
                             <form class="form-inline">
