--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -177,13 +177,32 @@
     </div>
 
     <div class="col-md-6">
+
         <div class="panel-group" style="width: 100%;">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="texth3" data-toggle="collapse" data-target="#getContacts">
-                        <i class="fa fa-book" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getContacts">Contacts</a>
+                    <h3 class="panel-title texth3" style="font-size:25px;color:#4776a1">
+                        <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1">
+                        </i> @Ajax.ActionLink("Contacts", "GetContacts", "Terminals", new { id = Model.Id, terminalId = Model.TerminalId },
+                   new AjaxOptions
+                   {
+                       UpdateTargetId = "getContacts",
+                       LoadingElementId = "loading3",
+                       InsertionMode = InsertionMode.Replace,
+                       HttpMethod = "Post"
+                   },
+                   htmlAttributes: new
+                   {
+                       @class = "link",
+                       data_toggle = "collapse",
+                       data_target = "#getContacts"
+                   })
                     </h3>
-                    @Html.Partial("Sections/Contacts", Model.TerminalContacts, new ViewDataDictionary() { { "terminalId", Model.Id } })
+                </div>
+                <div id="getContacts" class="panel-collapse collapse">
+                    <div class="panel-body">
+                        <div class="loader"></div>
+                    </div>
                 </div>
             </div>
         </div>
