--- a/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
@@ -1,8 +1,17 @@
-﻿@model IEnumerable<OctagonPlatform.Models.TerminalContact>
-    
-<div id="getContacts" class="panel-collapse collapse">
-    <div class="col-md-6" style="margin-top: 20px; margin-bottom: 20px">
-        @Ajax.ActionLink("ADD", "Create", "TerminalContacts", new { terminalId = ViewData["terminalId"]?.ToString() },
+﻿@model OctagonPlatform.Models.FormsViewModels.TerminalContactVM
+
+
+@{
+    if (ViewBag.Error != null)
+    {
+        <p class="alert alert-danger">
+            <strong>Error: @ViewBag.Error</strong>
+        </p>
+    }
+}
+
+<p class="col-md-6">
+    @Ajax.ActionLink("ADD", "Create", "TerminalContacts", new { id = Model.Id, terminalId = Model.TerminalId },
                    new AjaxOptions
                    {
                        UpdateTargetId = "AddContact",
@@ -16,43 +25,40 @@
                        data_toggle = "modal",
                        data_target = "#AddContact"
                    })
-    </div>
+</p>
 
-    @*
-        <p class="alert alert-info">
-            <strong>@ViewBag.Error</strong>
-        </p>
-    *@
 
-    <table id="contacts" class="table table-striped table-hover table-bordered">
-        <thead class="thead-blue">
-            <tr>
-                <th>Terminal</th>
-                <th>Name</th>
-                <th>Last Name</th>
-                <th>Phone</th>
-                <th>Email</th>
-                <th>Address</th>
+<table id="contacts" class="table table-striped table-hover table-bordered">
+    <thead class="thead-blue">
+        <tr>
+            <th>Name</th>
+            <th>Last Name</th>
+            <th>Phone</th>
+            <th>Email</th>
+            <th>Address</th>
 
-            </tr>
-        </thead>
-        <tbody id="listOfTerminalContacts">
-            @foreach (var item in Model)
-    {
-        if (!item.Deleted)
-        {
-            <tr class="info">
-                <td>@item.TerminalId</td>
-                <td>@item.Name</td>
-                <td>@item.LastName</td>
-                <td>@item.Phone</td>
-                <td>@item.Email</td>
-                <td>@item.Address1</td>
-         
-            </tr>
+        </tr>
+    </thead>
+    <tbody id="listOfTerminalContacts">
+        @if (Model.Contacts != null)
+            {
+            foreach (var item in Model.Contacts)
+            {
+                if (!item.Deleted)
+                {
+                    <tr class="info">
+                        <td>@item.Name</td>
+                        <td>@item.LastName</td> 
+                        <td>@item.Phone</td>
+                        <td>@item.Email</td>
+                        <td>@item.Address1</td>
+
+                    </tr>
+                }
+            }
         }
-    }
-    </table>
+
+</table>
 </div>
 @section Scripts {
     @Scripts.Render("~/bundles/search")
