--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -239,10 +239,28 @@
         <div class="panel-group" style="width: 100%;">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="texth3" data-toggle="collapse" data-target="#getSurcharge">
-                        <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getSurcharge">Surcharge</a>
+                    <h3 class="panel-title texth3" style="font-size:25px;color:#4776a1">
+                        <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1">
+                        </i> @Ajax.ActionLink("Surcharge", "GetSurcharges", "Terminals", new { id = Model.Id, terminalId = Model.TerminalId },
+                   new AjaxOptions
+                   {
+                       UpdateTargetId = "getSurcharges",
+                       LoadingElementId = "loading3",
+                       InsertionMode = InsertionMode.Replace,
+                       HttpMethod = "Post"
+                   },
+                   htmlAttributes: new
+                   {
+                       @class = "link",
+                       data_toggle = "collapse",
+                       data_target = "#getSurcharges"
+                   })
                     </h3>
-                    @Html.Partial("Sections/Surcharge", Model.Surcharges, new ViewDataDictionary() { { "terminalId", Model.Id } })
+                </div>
+                <div id="getSurcharges" class="panel-collapse collapse">
+                    <div class="panel-body">
+                        <div class="loader"></div>
+                    </div>
                 </div>
             </div>
         </div>
