--- a/OctagonPlatform/Views/ReportsSmart/_PartialMorrisChart.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/_PartialMorrisChart.cshtml
@@ -33,7 +33,7 @@
                     if (range == 'month')
                         return d.getFullYear()+" - "+months[d.getMonth()];
                     else
-                    return  ("0" + (d.getMonth() + 1)).slice(-2) + '-' + ("0" + (d.getDate())).slice(-2) + '-' + ("0" + (d.getFullYear())).slice(-2);
+                    return  ("0" + (d.getMonth() + 1)).slice(-2) + '/' + ("0" + (d.getDate())).slice(-2) + '/' + ("0" + (d.getFullYear())).slice(-2);
 
                 },
                 resize:true
