--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -300,11 +300,10 @@
                     <h3 class="panel-title texth3" style="font-size:25px;color:#4776a1">
                         <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1">
                         </i>
-                        <a id="apiterminals">prueba</a>
                         @Ajax.ActionLink("Cash Management", "GetCashManagement", "Terminals", new { id = Model.Id, terminalId = Model.TerminalId },
                    new AjaxOptions
                    {
-                      
+                       UpdateTargetId = "getCashManagement",
                        LoadingElementId = "loading3",
                        InsertionMode = InsertionMode.Replace,
                        HttpMethod = "Post",
@@ -378,42 +377,13 @@
     @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
 
     <script>
-      
-        var url = '@Url.Action("GetCashManagement", "Terminals")';
-        $(function () {
 
+        $(function () {
             $("#deleteInterchange").click(function () {
                 var id = $(this).data('id');
                 $("#confirmdeleteInterchange #id").val(id);
-
             });
-            $("#apiterminals").click(function () {
-               
-                $.post(url, { id: 2, terminalId: 'NH061617' }, function (data) {
-                    alert(data);
-                });
-            });
-
         });
-
-        function Complete() {
-            $("#loader").addClass("hidden");
-        }
-
-        function Success(data) {
-            alert("estoy en el success");
-            $(".msg").show(300);
-            if (data.Status == "0") {
-
-                $(".msg").addClass("alert-success");
-                location.href = "../Home/Index";
-
-            } else {
-                $(".msg").removeClass("alert-success");
-                $(".msg").addClass("alert-danger");
-                $(".msg").html(data.Message);
-            }
-        }
 
     </script>
 
