ATM Managment Studio

--- a/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
@@ -22,7 +22,7 @@
         </div>
         <div class="col-md-8" style="text-align:center;">
 
-            <div class="row">
+            @*<div class="row">
                 <div class="col-md-4" style="padding-top: 5px;">
                     <a href="#">
                         <i class="fa fa-btc fa-fw" style="font-size:20px"></i>BTC/USD:
@@ -45,8 +45,8 @@
                     </a>
                     USD @Session["LTC"] &nbsp;&nbsp;&nbsp;
                 </div>
-            </div>
-            <h1 class="businessName">@Session["businessName"].ToString()</h1>
+            </div>*@
+            <h1 class="businessName">ATM Managment Studio</h1>
         </div>
         <div class="col-md-2">
 
