--- a/OctagonPlatform/Views/Terminals/Sections/CashManagements.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/CashManagements.cshtml
@@ -1,18 +1,27 @@
 ﻿@model List<OctagonPlatform.Controllers.Reports.JSON.JsonLoadCash>
 
-
+@{
+    if (ViewBag.Error != null)
+    {
+        <p class="alert alert-danger">
+            <strong>Error: @ViewBag.Error</strong>
+        </p>
+    }
+}
     <table>
         <tbody>
             @{
-                foreach (var item in Model)
+                if (Model != null)
                 {
-                    <tr>
-                        <td>Last 30 days Loads</td>
-                        <td>Type</td>
-                        <td>Previous Balance</td>
-                        <td>Load Amount</td>
-                        <td>New Balance</td>
-                    </tr>
+                    foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>Last 30 days Loads</td>
+                            <td>Type</td>
+                            <td>Previous Balance</td>
+                            <td>Load Amount</td>
+                            <td>New Balance</td>
+                        </tr>
 
                         <tr>
                             <td>
@@ -29,6 +38,7 @@
                                 @item.AmountCurrent
                             </td>
                         </tr>
+                    }
                 }
             }
         </tbody>
