--- a/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
@@ -1,5 +1,5 @@
 ﻿@model OctagonPlatform.Models.FormsViewModels.TerminalConfigViewModel
-
+<div>
     <table class="table table-striped table-hover ">
         <tr class="info">
             <th data-toggle="collapse" data-target="#collapse1">
@@ -21,7 +21,7 @@
                                         </td>
                                     </tr>
                                 }
-                                }
+                            }
                             <tr>
                                 <td>
                                     <button type="button" class="btn btn-info btn-microsoft" data-toggle="modal" data-target="#ModalAddWorkingHours">Add</button>
@@ -67,29 +67,25 @@
     @Html.CheckBoxFor(m => m.IgnoreTopDoorOpen, new { @disabled = "disabled" }) Top door is Open<br />
 
     <button type="button" class="btn btn-info btn-microsoft" data-toggle="modal" data-target="#myModal">Edit configuration</button>
-    
+</div>
+
     @*========= Modal =========*@
     <div id="myModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
-            <div class="modal-content">
+            <div class="modal-content col-lg-10">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Modal Header</h4>
+                    <h4 class="modal-title">Edit configuration</h4>
                 </div>
-
-                <h3 class="alert-info">Edit Config Alert</h3>
 
                 @using (Html.BeginForm("SetConfiguration", "Terminals"))
             {
-                    @Model
                     @Html.AntiForgeryToken()
                     @Html.Hidden("id",Model.Id)
                     @Html.Hidden("terminalId", Model.TerminalId)
 
                     <p class="alert alert-danger">
-                        All fields are <strong>required.</strong>
                         @ViewBag.Error
-                        @Html.ValidationSummary(false, "Please fix the fallowing errors!!!", new { @class = "text-danger" })
                     </p>
                     <div class="form-group">
                         @Html.LabelFor(m => m.IgnoreHoursInactive)
@@ -144,8 +140,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Modal Header</h4>
-                    <h3 class="alert-info">Edit Config Alert</h3>
+                    <h4 class="modal-title">Edit configuration</h4>
                 </div>
 
                 @using (Html.BeginForm("SetWorkingHours", "Terminals"))
