Added OctagonController and Layouts. Added AMS view

--- a/OctagonPlatform/Views/Shared/Sections/OctagonSidebar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/OctagonSidebar.cshtml
@@ -15,32 +15,46 @@
                     <!-- /input-group -->
                 </li>
                 <li>
-                    <a href="@Url.Action("Index", "Dashboard", new {logo = ViewBag.Logo, businessName = ViewBag.BusinessName})">
-                        <i class="fa fa-dashboard fa-fw"></i> Dashboard
+                    <a href="@Url.Action("AMS", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
+                        <i class="fa fa-dashboard fa-fw"></i> AMS
                     </a>
                 </li>
                 <li>
-                    <a href="@Url.Action("Index", "Terminals")">
-                        <i class="fa fa-desktop fa-fw"></i> Terminals
+                    <a href="#">
+                        <i class="fa fa-desktop fa-fw"></i> BeComm
                     </a>
                 </li>
                 <li>
-                    @* <a href="#"><i class="fa fa-group fa-fw"></i> Partners</a> *@
-                    <a href="@Url.Action("Index", "Partners")">
-                        <i class="fa fa-group fa-fw"></i> Partners
+                    <a href="#">
+                        <i class="fa fa-desktop fa-fw"></i> Cryptoxone
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-desktop fa-fw"></i> AVT
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-desktop fa-fw"></i> Demmoney
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-desktop fa-fw"></i> Cash Everywhere
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-desktop fa-fw"></i> VendBot
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-desktop fa-fw"></i> Micro Loan
                     </a>
                 </li>
 
-                <li>
-                    <a href="@Url.Action("Index", "TerminalAlerts")">
-                        <i class="fa fa-flag fa-fw"></i> Alerts
-                    </a>
-                </li>
-                <li>
-                    <a href="@Url.Action("Index", "Disputes")">
-                        <i class="fa fa-flag fa-fw"></i> Disputes
-                    </a>
-                </li>
                 <li class="">
                     <a href="#"><i class="fa fa-table fa-fw"></i> Reports<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level collapse" aria-expanded="false" style="height: 0px;">
