--- a/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
@@ -67,6 +67,11 @@
                     </ul>
                     <!-- /.nav-second-level -->
                 </li>
+                <li>
+                    <a href="@Url.Action("AMS", "Octagon")">
+                        <i class="fa fa-flag fa-fw"></i> Octagon
+                    </a>
+                </li>
             </ul>
         </div>
         <!-- /.sidebar-collapse -->
