Added ActionLink to Octagon on sidebar

--- a/OctagonPlatform/Views/Shared/Sections/OctagonSidebar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/OctagonSidebar.cshtml
@@ -25,7 +25,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="@Url.Action("Cryptoxone", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
                         <i class="fa fa-desktop fa-fw"></i> Cryptoxone
                     </a>
                 </li>
